Bug 1312085 - part 2 - remove XP conditionalization for JS mutexes; r=fitzgen

Now that we don't support XP, we can use InitializeCriticalSectionEx
explicitly, rather than calling it through a function pointer.